Fixed the issue that blocked parts of dialog UI due to overlapping.

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.css
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.css
@@ -64,7 +64,6 @@
 	padding: 0;
 	position: absolute;
 	width: 720px;
-	z-index: 1000;
 }
 
 .dialog-footer {
